! fix #3328 Improve Alignment issue with the "insert" button at low resolution

--- a/themes/default/css/index.css
+++ b/themes/default/css/index.css
@@ -6040,6 +6040,11 @@ a > i {
 		margin: 1em auto;
 		display: block;
 	}
+	.statusbar .insertoverlay .button {
+		left: 0;
+		top: -3em;
+		border-radius: 4px;
+	}
 
 	/*.listlevel1#button_profile .linklevel1 {
 		min-width: 0.5em;
